--- a/views/partials/commentForm.hbs
+++ b/views/partials/commentForm.hbs
@@ -1,4 +1,4 @@
-<form action="/tweets/{{tweet._id}}/comments" method="POST" class="mb-4 bg-light p-2">
+<form action="/maps/{{map.id}}/comments" method="POST" class="mb-4 bg-light p-2">
   <div class="form-group">
     <textarea name="text" type="text" class="form-control" id="text" rows="3"></textarea>
   </div>
