Attempt to change maps / changing slides remaining

--- a/views/maps/edit.hbs
+++ b/views/maps/edit.hbs
@@ -2,7 +2,7 @@
 
 <div>
 <div id="main">
-   <form id="mapForm" onsubmit="return saveMapData()">
+   <form id="mapForm" method="POST" onsubmit="return saveMapData()">
 <div class="form-group">
             <label for="mapId">ID</label>
             <input name="mapId" type="text" class="form-control title" id="mapId"
