--- a/views/users/userDashboard.hbs
+++ b/views/users/userDashboard.hbs
@@ -5,9 +5,9 @@
         <img class="card-img-top" src="../../images/map.png" alt="Card image cap">
         {{!-- <button type="button" class="btn btn-outline-info btn-block">Start</button> --}}
         <a href="/maps/new"> <button type="button" class="btn btn-outline-info btn-block">Start</button></a>
-  </div>
-{{!-- Profile --}}
+</div>
 
+{{!-- Profile --}}
   <div class="col-xs-3 ml-5 mt-4 text-center bord-rad">
           <img class="card-img-top w-75" src="/../../images/avataaars.png" alt="Card image cap">
           <h4 class="text-info">Hi, {{currentUser.name}}!</h4> 
@@ -18,18 +18,85 @@
             <li><a href="https://docs.mapbox.com/help/" target="_blank" class="btn btn-outline-info">Help</a></li>
           </ul> 
   </div>
+
+{{!-- Maps --}}
+<div>
+    <div class="w-50">
+            <h3 class="text-info text-center">Take a quick look at your maps</h3>
+    </div>
+    <main role="main">
+        <div class="album py-5 bg-light">
+            <div class="container">
+                <div  class="row">
+                {{#each maps}}
+                    <div class="col-md-4">
+                    <div class="card mb-4 box-shadow">
+                        <img class="card-img-top" src="../../images/example.jpg" alt="Card image cap">
+                        <div class="card-body">
+                        <h3 class="card-text">{{this.title}}</h3>
+                        <p class="card-text">{{this.description}}</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                            <a href="/maps/{{this._id}}" type="button" class="btn btn-sm btn-outline-secondary">View</a>
+                            <a type="button" class="btn btn-sm btn-outline-secondary">Edit</a>
+                            </div>
+                            <form class="d-inline" action="/maps/{{this.id}}/delete" method="POST">
+                            <button class="btn btn-danger" type="submit">Delete</button>
+                            </form>
+                            <small class="text-muted">9 mins</small>
+                        </div>
+                        </div>
+                    </div>
+                    </div>
+                {{/each}}
+                </div>
+            </div>              
+        </div>
+    </main>
+</div>
+
   {{!-- User maps slider --}}
-  <div class="col-xs-12 mt-5 ml-5">
+  {{!-- <div class="col-xs-12 mt-5 ml-5">
           <div class="w-50">
             <h3 class="text-info text-center">Take a quick look at your maps</h3>
           </div>
+
+        <div  class="row">
+          {{#each maps}}
+            <div class="MultiCarousel" data-items="1,3,5,6" data-slide="1" id="MultiCarousel"  data-interval="1000">
+              <div class="MultiCarousel-inner">
+                <div class="item">
+                    <div class="pad15">
+                        <img class="card-img-top" src="{{../../images/example.jpg}}" alt="Card image cap">
+                        <div class="card-body">
+                        <h3 class="card-text">{{this.title}}Map</h3>
+                        <p class="card-text">{{this.description}}</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                <a href="/maps/{{this._id}}" type="button" class="btn btn-sm btn-outline-secondary">View</a>
+                                <a type="button" class="btn btn-sm btn-outline-secondary">Edit</a>
+                                </div>
+                                <form class="d-inline" action="/maps/{{this.id}}/delete" method="POST">
+                                <button class="btn btn-danger" type="submit">Delete</button>
+                                </form>
+                                <small class="text-muted">9 mins</small>
+                            </div>
+                        </div>
+                    </div>
+                </div class="item">
+              </div>
+            </div>
+          {{/each}}
+        </divclass="m-5>
+
+
           <div class="row">
             <div class="MultiCarousel" data-items="1,3,5,6" data-slide="1" id="MultiCarousel"  data-interval="1000">
-                    <div class="MultiCarousel-inner">
-                        <div class="item">
+                <div class="MultiCarousel-inner">
+                    <div class="item">
                             <div class="pad15">
-                                <img class="card-img-top" src="../../images/example.jpg" alt="Card image cap">
-                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <img class="card-img-top" src="{{../../images/example.jpg}}" alt="Card image cap">
+                                <p class="card-text">{{this.title}}</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                   <div class="btn-group">
                                       <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -38,7 +105,7 @@
                                   <small class="text-muted">9 mins</small>
                                 </div>
                             </div>
-                        </div>
+                    </div>
                         <div class="item">
                             <div class="pad15">
                                 <img class="card-img-top" src="../../images/example.jpg" alt="Card image cap">
@@ -83,9 +150,7 @@
                     <button class="btn btn-primary rightLst">></button>
               </div>
           </div>
-  </div>
-
-  
+  </div>  
 </div>
 
 <!------ Include the above in your HEAD tag ---------->
@@ -191,6 +256,7 @@
     }
 
 });
-</script>
+</script> --}}
 {{!-- header --}}
-    
+
+
