Avatar of the user,fixed mailer,little stylying,started edit user

--- a/views/maps/input.hbs
+++ b/views/maps/input.hbs
@@ -54,25 +54,7 @@
  --}}
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-            <div class="blog-slider__text">Caption Text</div>
+        <div class="blog-slider__text">Caption Te  /div>
         </div>
 
         <div class="blogSlides fade">
