--- a/views/users/login.hbs
+++ b/views/users/login.hbs
@@ -10,7 +10,7 @@
       {{error.email}}
     </div>
     {{/if}}
- 
+    <br>
     <label for="password" class="sr-only">password</label>
     <input name="password" type="password" class="form-control {{#if error.password }}is-invalid{{/if}}" id="password"
       placeholder="password" value="{{ user.password }}">
@@ -21,22 +21,20 @@
     </div>
     {{/if}}
 
-     <div class="checkbox mb-3">
+     {{!-- <div class="checkbox mb-3">
         <label>
           <input type="checkbox" value="remember-me"> Remember me
         </label>
-      </div>
+    </div> --}}
   </div>
 
-  <button type="submit" class="btn btn-outline-primary btn-lg">
-    Log in
+  <button type="submit" class="btn btn-primary btn-sm">
+    Log in with your Argonaut account
   </button>
   
 </form>
 
 <br>
-<br>
-
 
 <form action="/google" method="post" class="mb-3">
   <button class="btn btn-danger btn-sm" type="submit">
@@ -45,14 +43,14 @@
   </button>
 </form>
 
-<form action="/facebook" method="post" class="mb-3">
+{{!-- <form action="/facebook" method="post" class="mb-3">
   <button class="btn btn-primary btn-sm" type="submit">
     <i class="fa fa-facebook"></i> Login with Facebook
   </button>
-</form>
+</form> --}}
 
-<form action="/slack" method="post">
+{{!-- <form action="/slack" method="post">
   <button class="btn btn-warning btn-sm " type="submit">
     <i class="fa fa-slack"></i> Login with Slack
   </button>
-</form>
+</form> --}}
