--- a/views/users/userDashboard.hbs
+++ b/views/users/userDashboard.hbs
@@ -9,11 +9,16 @@
 
 {{!-- Profile --}}
   <div class="col-xs-3 ml-5 mt-4 text-center bord-rad">
-          <img class="card-img-top w-75" src="/../../images/avataaars.png" alt="Card image cap">
           <h4 class="text-info">Hi, {{currentUser.name}}!</h4> 
-          <ul class="list-unstyled">
-            <li><button type="button" class="btn btn-outline-info">Edit your profile</button></li>
-            <li><button type="button" class="btn btn-outline-info">Change password</button></li>
+          {{!-- <img class="card-img-top w-75" src="/../../images/avataaars.png" alt="Card image cap"> --}}
+          <img src="{{currentUser.avatar}}" class="card-img-top w-75"/>
+          
+          <ul class="list-unstyled mt-5">
+            <li>
+                <button type="button" class="btn btn-outline-info">Edit your profile</button>
+                <a href="/users/{{currentUser.id}}/edit" class="btn btn-outline-info">Edit your profile</a>
+            </li>
+            {{!-- <li><button type="button" class="btn btn-outline-info">Change password</button></li> --}}
             <li><a href="https://docs.mapbox.com/" target="_blank" class="btn btn-outline-info">Documentation</a></li>
             <li><a href="https://docs.mapbox.com/help/" target="_blank" class="btn btn-outline-info">Help</a></li>
           </ul> 
