Attempt to change maps again/ a bit of styling

--- a/views/maps/index.hbs
+++ b/views/maps/index.hbs
@@ -57,11 +57,11 @@
                     </div>
 
 <form class="d-inline" action="/maps/{{this.id}}/delete" method="POST">
-      <button class="btn btn-danger" type="submit">Delete</button>
+      <button class="btn btn-sm btn-outline-danger" type="submit">Delete</button>
     </form>
 
 
-                    <small class="text-muted">9 mins</small>
+                    
                   </div>
                 </div>
               </div>
