--- a/views/users/userDashboard.hbs
+++ b/views/users/userDashboard.hbs
@@ -15,8 +15,8 @@
           
           <ul class="list-unstyled mt-5">
             <li>
-                <button type="button" class="btn btn-outline-info">Edit your profile</button>
-                <a href="/users/{{currentUser.id}}/edit" class="btn btn-outline-info">Edit your profile</a>
+                {{!-- <button type="button" class="btn btn-outline-info">Edit your profile</button> --}}
+                <a href="/users/{{currentUser._id}}/editUser" class="btn btn-outline-info">Edit your profile</a>
             </li>
             {{!-- <li><button type="button" class="btn btn-outline-info">Change password</button></li> --}}
             <li><a href="https://docs.mapbox.com/" target="_blank" class="btn btn-outline-info">Documentation</a></li>
