--- a/views/users/editUser.hbs
+++ b/views/users/editUser.hbs
@@ -1,6 +1,6 @@
 
     <div class="container">
-    <h1>Edit your Profile</h1>
+    <h2 class="text-info text-center">Edit your Profile</h2>
 	<div class="row">
       <!-- left column -->
       {{!-- <div class="col-md-3">
@@ -13,11 +13,9 @@
       </div> --}}
       
       <!-- edit form column -->
-      <div class="col-md-9 personal-info">
-       
-        <h3>Personal info</h3>
-        
-        <form action="/users/{{currentUser._id}}/editUser" method="POST" class="form-horizontal" >
+      <div class="col-md-9 personal-info text-center">
+        <hr>
+        <form action="/users/{{currentUser._id}}/editUser" method="POST" class="form-horizontal text-center" >
           <div class="form-group">
             <label class="col-lg-3 control-label">Name:</label>
             <div class="col-lg-8">
@@ -39,7 +37,8 @@
           <div class="form-group">
             <label class="col-md-3 control-label"></label>
             <div class="col-md-8">
-              <input type="button" class="btn btn-primary" value="Save Changes">
+              {{!-- <input type="button" class="btn btn-primary" value="Save Changes"> --}}
+              <button type="submit" class="btn btn-primary">Save changes</button>
               <span></span>
               <a href="/users/profile"> <button type="button" class="btn btn-danger">Cancel</button></a>
             </div>
