debbuging code edit user

--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -119,7 +119,7 @@
   <div class="form-group">
     <label for="avatar">Avatar</label>
     <input name="avatar" type="file" class="form-control-file {{#if error.avatar }}is-invalid{{/if}}" id="avatar"
-      placeholder="Enter avatar url" value="{{ user.avatar }}">
+      placeholder="Select a file from your computer" value="{{ user.avatar }}">
 
     {{#if error.avatar}}
     <div class="invalid-feedback">
