--- a/views/users/editUser.hbs
+++ b/views/users/editUser.hbs
@@ -2,37 +2,32 @@
     <div class="container">
     <h2 class="text-info text-center">Edit your Profile</h2>
 	<div class="row">
-      <!-- left column -->
-      {{!-- <div class="col-md-3">
-        <div class="text-center">
-          <img src="//placehold.it/100" class="avatar img-circle" alt="avatar">
-          <h6>Upload a different photo...</h6>
-          
-          <input type="file" class="form-control">
-        </div>
-      </div> --}}
-      
-      <!-- edit form column -->
       <div class="col-md-9 personal-info text-center">
         <hr>
-        <form action="/users/{{currentUser._id}}/editUser" method="POST" class="form-horizontal text-center" >
+        <form action="/users/{{currentUser._id}}/editUser" method="POST" class="form-horizontal text-center"  enctype="multipart/form-data">
           <div class="form-group">
             <label class="col-lg-3 control-label">Name:</label>
             <div class="col-lg-8">
-              <input class="form-control" type="text" value="{{currentUser.name}}">
+              <input class="form-control" name="name" type="text" value="{{currentUser.name}}">
             </div>
           </div>
           <div class="form-group">
             <label class="col-lg-3 control-label">Surname:</label>
             <div class="col-lg-8">
-              <input class="form-control" type="text" value="{{currentUser.surName}}">
+              <input class="form-control" name="surName" type="text" value="{{currentUser.surName}}">
             </div>
           </div>
           <div class="form-group">
             <label class="col-lg-3 control-label">Bio:</label>
             <div class="col-lg-8">
-              <input class="form-control" type="text" value="{{currentUser.bio}}" rows="4"></input>
+              <input class="form-control" name="bio" type="text" value="{{currentUser.bio}}" rows="4"></input>
             </div>
+          </div>
+          <div class="form-group">
+              <label class="col-lg-3 control-label" for="avatar">Avatar</label>
+              <div class="col-lg-8">
+              <input name="avatar" type="file" class="form-control-file" id="avatar" placeholder="Select a file from your computer" value="{{ user.avatar }}">
+              </div>
           </div>
           <div class="form-group">
             <label class="col-md-3 control-label"></label>
