--- a/views/maps/edit.hbs
+++ b/views/maps/edit.hbs
@@ -4,27 +4,27 @@
 <div id="main">
    <form id="mapForm" method="POST" onsubmit="return saveMapData()">
 <div class="form-group">
-            <label for="mapId">ID</label>
-            <input name="mapId" type="text" class="form-control title" id="mapId"
-            value="{{map.id}}">
+            
+            <input name="mapId" type="hidden" class="form-control title" id="mapId"
+            value="{{map.id}}" >
             </div>
 
           <div class="form-group">
-            <label for="mapTitle">Edit map title</label>
+            <h4 for="mapTitle">Edit map title</h4>
             <input name="mapTitle" type="text" class="form-control title" id="mapTitle"
-            value="{{map.title}}">
+            value="{{map.title}}" required>
             </div>
 
             <div class="form-group">
-            <label for="mapDescription">Edit map description</label>
+            <h5 for="mapDescription">Edit map description</h5>
             <textarea name="mapDescription" type="text" class="form-control description"  id="mapDescription"
-             rows="4">{{map.description}}</textarea>
+             rows="4" >{{map.description}}</textarea>
 
             
         </div>
 
        
-<input type="submit" value="Submit edited map features">
+<input type="submit" class="btn btn-secondary" value="Edit map features">
 
 </form>
 
@@ -34,55 +34,56 @@
 {{#each map.slides as |s|}}
 
 
- <form onsubmit="return saveData()">
+ <form id="slideForm" onsubmit="return saveData()">
 
 <div class="form-group">
-            <label for="id">Slide Id</label>
-            <input name="id" type="text" class="form-control title" id="id"
+            
+            <input name="id" type="hidden" class="form-control title" id="id"
              value="{{s.id}}">
             </div>
 
 
           <div class="form-group">
-            <label for="title">Enter slide title</label>
+            <h4 for="title">Enter slide title</h4>
             <input name="title" type="text" class="form-control title" id="title"
-             value="{{s.title}}">
+             value="{{s.title}}" required>
             </div>
 
             <div class="form-group">
-            <label for="description">Enter slide text</label>
+            <h5 for="description">Enter slide text</h5>
             <textarea name="description" type="text" class="form-control description"  id="description"
-             value="{{s.description}}" rows="4">{{s.description}}</textarea>
+             value="{{s.description}}" rows="4" required>{{s.description}}</textarea>
 
             
         </div>
 
 
         <div class="form-group">
-            <label for="image">Enter image url</label>
+            <h5 for="image">Enter image url</h5>
             <input name="image" type="text" class="form-control image" id="image"
             value="{{s.image}}">
             </div>
 
         <div class="form-group">
-            <label for="long">Longitude</label>
+            <h5 for="long">Longitude</h5>
             <input name="long" type="number" step="any" class="form-control title" id="long"
-             value="{{s.long}}">
+             value="{{s.long}}" required>
             </div>
 
         <div class="form-group">
-            <label for="lat">Latitude</label>
+            <h5 for="lat">Latitude</h5>
             <input name="lat" type="number" step="any" class="form-control title" id="lat"
-             value="{{s.lat}}">
+             value="{{s.lat}}" required>
              
             </div>    
 
 
-<input type="submit" value="Edit this slide">
+<input type="submit" class="btn btn-secondary" value="Edit this slide">
 </form>
 
 {{/each}}
 
+<br>
 
   <button type="button" class="btn btn-primary" id="create-map-btn">
     Save Changes
@@ -94,8 +95,7 @@
 <br>
 
 
-<pre id='info'></pre>
- <div id="map"></div>
+
  
  <script>
   
@@ -110,87 +110,24 @@ let mapDescription = ""
 let id = ""
 
 
-      mapboxgl.accessToken = 'pk.eyJ1IjoiaXJvbm1vZHVsZTIiLCJhIjoiY2szZnQzdzN0MDdzNjNjbzQ5amZ5M24wMyJ9.1AdiIc2dD4lw7Toih03G0Q';
-
-        const map = new mapboxgl.Map({
-            container: 'map',
-            style: 'mapbox://styles/mapbox/streets-v11',
-            center: [-77.04, 38.907],
-            zoom: 11.15,
-        });
+     
 
         
-map.addControl(new mapboxgl.NavigationControl());
-        console.log(map)
 
-        map.on('load', function() {
-            map.loadImage('https://img.icons8.com/android/24/000000/marker.png', function(error, image) {
-                if (error) throw error;
-                map.addImage('marker', image);
-                map.addLayer({
-                    "id": "points",
-                    "type": "symbol",
-                    "source": {
-                        "type": "geojson",
-                        "data": {
-                            "type": "FeatureCollection",
-                            "features": [{
-                                "type": "Feature",
-                                "geometry": {
-                                    "type": "Point",
-                                    "coordinates": [0, 0]
-                                }
-                            }]
-                        }
-                    },
-                    "layout": {
-                        "icon-image": "marker",
-                        "icon-size": 1
-                    }
-                });
-            });
-        });
-
-map.on('mousemove', function (e) {
-document.getElementById('info').innerHTML =
-// e.point is the x, y coordinates of the mousemove event relative
-// to the top-left corner of the map
-//JSON.stringify(e.point) + '<br />' +
-// e.lngLat is the longitude, latitude geographical position of the event
-JSON.stringify(e.lngLat.wrap());
-
-map.on('click', function (b){
-  let long = b.lngLat.lng
-  let lat = b.lngLat.lat
-  console.log(long)
-
-  longitude = Number(document.getElementById('long').value= b.lngLat.lng)
-   latitude = Number(document.getElementById('lat').value = b.lngLat.lat)
-
-console.log(longitude)
-
-let popup = new mapboxgl.Popup({closeOnClick: true})
-.setLngLat([long, lat])
-.setHTML('<h1>Your location</h1>')
-.addTo(map);
-
-  //console.log(b.lngLat.lng)
-  //console.log(b.lngLat.lat)
-
-})
-});
 
 const arrObj = []
 const mapObj = []
 
      function saveData(){
      
-           
+         
 
 id = document.getElementById("id").value
           title = document.getElementById("title").value
           description = document.getElementById("description").value
-          image = document.getElementById("image").value
+          longitude = document.getElementById("long").value
+          latitude = document.getElementById("lat").value
+
          
         // console.log(title)
           let slide = 0
@@ -207,7 +144,7 @@ id = document.getElementById("id").value
         arrObj.push({...element})
        
         console.log(arrObj)
-
+document.getElementById('slideForm').remove()
         
         return false
          
