--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -319,37 +319,10 @@ textarea:invalid {
 .next {
     right: 0;
     border-radius: 3px 0 0 3px;
+    margin-left: 150px;
 }
 
 .prev:hover,
 .next:hover {
     background-color: rgba(0, 0, 0, 0.8);
-}
-
-.blogSlider__dots {
-    text-align: center;
-    cursor: pointer;
-    height: 10px;
-    width: 10px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-}
-
-.--dot {
-    cursor: pointer;
-    height: 10px;
-    width: 10px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-}
-
-.active,
-.blogSlider__dots--dot:hover {
-    background-color: #717171;
 }
