--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,21 +1,15 @@
-<nav class="site-header sticky-top py-1 navbar-light bg-light">
-      <div class="container d-flex flex-column flex-md-row justify-content-between">
+<nav class="site-header sticky-top py-1 navbar-dark bg-dark">
+      <div class="container d-flex align-items-center justify-content-around">
         <a class="py-2" href="#">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="d-block mx-auto"><circle cx="12" cy="12" r="10"></circle><line x1="14.31" y1="8" x2="20.05" y2="17.94"></line><line x1="9.69" y1="8" x2="21.17" y2="8"></line><line x1="7.38" y1="12" x2="13.12" y2="2.06"></line><line x1="9.69" y1="16" x2="3.95" y2="6.06"></line><line x1="14.31" y1="16" x2="2.83" y2="16"></line><line x1="16.62" y1="12" x2="10.88" y2="21.94"></line></svg>
         </a>
-        <a class="py-2 d-none d-md-inline-block" href="../home">Home</a>
-        <a class="py-2 d-none d-md-inline-block" href="../maps">Maps</a>
-        {{!-- <a class="py-2 d-none d-md-inline-block" href="#">Features</a>
-        <a class="py-2 d-none d-md-inline-block" href="#">Enterprise</a>
-        <a class="py-2 d-none d-md-inline-block" href="#">Support</a> --}}
-        <a class="py-2 d-none d-md-inline-block" href="../users/new">Register</a>
-        <a class="py-2 d-none d-md-inline-block" href="../login">Login</a>
-        <form action="/logout" method="post">
-  <button type="submit" class="btn btn-outline-secondary btn-sm">Logout</button>
+        <a class="py-2 text-white d-none d-sm-inline-block" href="../home">Home</a>
+        <a class="py-2 text-white d-none d-sm-inline-block" href="../maps">Maps</a>
+        <a class="py-2 text-white d-none d-sm-inline-block" href="../users/new">Sign up</a>
+        <a class="py-2 text-white d-none d-sm-inline-block" href="../login">Login</a>
+        <form class="py-2 d-none d-md-inline-block" action="/logout" method="post">
+  <button type="submit" class="btn btn-outline-secondary btn-outline-light btn-sm">Logout</button>
 </form>
-         <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
-    </form>
+        
   </div>
 </nav>
