styles partially completed

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -28,7 +28,8 @@
 
 <body>
   {{>navbar}}
-  <div class="container mt-5 pb-5">
+  <div class="container mt-5 pb-5" style="min-height: calc(100vh - 300px)";
+>
     {{>alert}}
     {{{body}}}
     
