--- a/views/maps/index.hbs
+++ b/views/maps/index.hbs
@@ -2,7 +2,7 @@
 
       <section class="jumbotron text-center">
         <div class="container">
-          <h1 class="jumbotron-heading">Album example</h1>
+          <h1 class="jumbotron-heading">Community maps</h1>
           <p class="lead text-muted">Take a look to the most beautiful stories</p>
           <p>
             <a href="#" class="btn btn-primary my-2">Sort by popularity</a>
@@ -15,27 +15,7 @@
         <div class="container">
 
 
-{{!-- <h2>Movies</h2>
-<a href="/movies/create" class="btn btn-success mb-3">Add</a>
-{{#each movies}}
-<div class="card">
-  <div class="card-body">
-    <h5 class="card-title">
-      {{this.title}}
-    </h5>
-    <p><small>{{this.genre}}</small></p>
-   
-    <a href="/movies/{{this.id}}" class="btn btn-info">
-      See details
-    </a>
-    <a href="/movies/{{this.id}}/edit" class="btn btn-success">
-      Edit
-    </a>
-    <form class="d-inline" action="/movies/{{this.id}}/delete" method="POST">
-      <button class="btn btn-danger" type="submit">Delete</button>
-    </form>
-  </div>
-</div> --}}
+
 
 
         <div  class="row">
