--- a/views/users/login.hbs
+++ b/views/users/login.hbs
@@ -1,4 +1,12 @@
-<form action="/login" method="POST" class="mb-3" autocomplete="off">
+
+<div class="container d-flex justify-content-center">
+
+
+<div class="col-md-5 p-lg-5 mx-auto my-5 traslucid ">
+       
+      
+
+<form action="/login" method="POST" class="mb-3" autocomplete="off" >
 
   <div class="form-group form-signin">
     <label for="email" class="sr-only">Email address</label>
@@ -27,14 +35,15 @@
         </label>
     </div> --}}
   </div>
-
-  <button type="submit" class="btn btn-primary btn-sm">
+<div class="text-center">
+  <button type="submit" class="btn btn-primary btn-sm ">
     Log in with your Argonaut account
   </button>
-  
+  </div>
 </form>
 
 <br>
+<div class="text-center">
 
 <form action="/google" method="post" class="mb-3">
   <button class="btn btn-danger btn-sm" type="submit">
@@ -42,15 +51,6 @@
     Login with Google
   </button>
 </form>
-
-{{!-- <form action="/facebook" method="post" class="mb-3">
-  <button class="btn btn-primary btn-sm" type="submit">
-    <i class="fa fa-facebook"></i> Login with Facebook
-  </button>
-</form> --}}
-
-{{!-- <form action="/slack" method="post">
-  <button class="btn btn-warning btn-sm " type="submit">
-    <i class="fa fa-slack"></i> Login with Slack
-  </button>
-</form> --}}
+</div>
+</div>
+</div>
