styles partially completedtruly

--- a/views/maps/index.hbs
+++ b/views/maps/index.hbs
@@ -31,10 +31,9 @@
                       <a href="/maps/{{this._id}}" type="button" class="btn btn-sm btn btn-primary">View</a>
                       <a href="/maps/{{this._id}}/edit" type="button" class="btn btn-sm btn btn-primary">Edit</a>
                     </div>
-                    <form class="d-inline" action="/maps/{{this.id}}/delete" method="POST">
+                    {{!-- <form class="d-inline" action="/maps/{{this.id}}/delete" method="POST">
                       <button class="btn btn-danger" type="submit">Delete</button>
-                    </form>
-                    <small class="text-muted">9 mins</small>
+                    </form> --}}
                   </div>
                 </div>
               </div>
