--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -62,11 +62,11 @@ label {
 }
 
 input:invalid {
-    border: 2px solid red;
+    border: 2px solid #8b5050;
 }
 
 textarea:invalid {
-    border: 2px solid red;
+    border: 2px solid #8b5050;
 }
 
 
