--- a/views/users/userDashboard.hbs
+++ b/views/users/userDashboard.hbs
@@ -1,10 +1,11 @@
 {{!-- new map --}}
+ 
 <div class="container">
   <div class="col-xs-7 ml-5 text-center">
-        <h4 class="text-info">Create a new map from scratch</h4>
+        <h4 class="text-info"></h4>
         <img class="card-img-top" src="../../images/map.png" alt="Card image cap">
         {{!-- <button type="button" class="btn btn-outline-info btn-block">Start</button> --}}
-        <a href="/maps/new"> <button type="button" class="btn btn-outline-info btn-block">Start</button></a>
+        <a href="/maps/new"> <button type="button" class="btn btn-primary btn-block btn-lg">Create a new map from scratch</button></a>
 </div>
 
 {{!-- Profile --}}
@@ -25,12 +26,18 @@
 </div>
 
 {{!-- Maps --}}
-<div>
-    <div class="w-50">
-            <h3 class="text-info text-center">Take a quick look at your maps</h3>
+
+    <br>
+   <br>
+<br>   
+<br>
+         <div class="w-50"></div>
+           
     </div>
-    <main role="main">
-        <div class="album py-5 bg-light">
+        <div class=" album py-5 bg-light">
+             <h1 class="text-center">Take a quick look at your maps</h1>
+             <br>   
+
             <div class="container">
                 <div  class="row">
                 {{#each maps}}
@@ -42,13 +49,12 @@
                         <p class="card-text">{{this.description}}</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                            <a href="/maps/{{this._id}}" type="button" class="btn btn-sm btn-outline-secondary">View</a>
-                            <a href="/maps/{{this._id}}/edit" type="button" class="btn btn-sm btn-outline-secondary">Edit</a>
+                            <a href="/maps/{{this._id}}" type="button" class="btn btn-sm btn btn-primary">View</a>
+                            <a href="/maps/{{this._id}}/edit" type="button" class="btn btn-sm btn btn-primary">Edit</a>
                             </div>
                             <form class="d-inline" action="/maps/{{this.id}}/delete" method="POST">
-                            <button class="btn btn-danger" type="submit">Delete</button>
+                            <button class="btn btn-danger btn-sm" type="submit">Delete</button>
                             </form>
-                            <small class="text-muted">9 mins</small>
                         </div>
                         </div>
                     </div>
@@ -58,7 +64,7 @@
             </div>              
         </div>
     </main>
-</div>
+
 
 
 
